--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -1,4 +1,10 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,400&display=swap");
+* {
+  font-family: "Bebas Neue", cursive;
+}
+
 .App {
   width: 100vw;
   height: auto;
@@ -7,11 +13,13 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #ffd7d7;
+  background-color: #fff;
 }
 
-* {
-  font-family: 'Lato', sans-serif;
+.flex_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* NAVBAR */
@@ -23,6 +31,9 @@ body {
   justify-content: space-between;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  z-index: 2;
+  margin-bottom: 20px;
 }
 
 .navbar a {
@@ -85,7 +96,6 @@ body {
   flex-direction: column;
   width: 100%;
 }
-
 #navbarResponsive .loginRegistration,
 #navbarResponsive .createPost,
 #navbarResponsive .params {
@@ -95,7 +105,6 @@ body {
   flex-direction: column;
   width: 100%;
 }
-
 #navbarResponsive .loginRegistration a,
 #navbarResponsive .createPost a,
 #navbarResponsive .params a {
@@ -112,13 +121,11 @@ body {
   font-weight: bold;
   transition: 0.5s ease background-color;
 }
-
 #navbarResponsive .loginRegistration a:hover,
 #navbarResponsive .createPost a:hover,
 #navbarResponsive .params a:hover {
   background-color: #fd2d01;
 }
-
 #navbarResponsive .loginRegistration .gearIcon,
 #navbarResponsive .createPost .gearIcon,
 #navbarResponsive .params .gearIcon {
@@ -140,12 +147,10 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .btnResponsive svg {
   font-size: 60px;
   border-radius: 30px;
 }
-
 .btnResponsive svg:hover {
   background-color: white;
   color: #fd2d01;
@@ -166,12 +171,10 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .btnResponsive2 svg {
   font-size: 50px;
   border-radius: 30px;
 }
-
 .btnResponsive2 svg:hover {
   color: #e60000;
 }
@@ -182,22 +185,21 @@ body {
 
 @media all and (min-width: 1100px) {
   #navbarResponsive,
-  .btnResponsive,
-  .btnResponsive2 {
+.btnResponsive,
+.btnResponsive2 {
     display: none;
   }
 }
-
 @media all and (max-width: 1100px) {
   .connectAndRegister,
-  .CreateAndMainPage,
-  .navbarRight {
+.CreateAndMainPage,
+.navbarRight {
     display: none;
   }
 }
-
 /***** CREATE POST PAGE CSS ******/
 .createPostPage {
+  padding-top: 40px;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   height: 70vh;
@@ -206,7 +208,6 @@ body {
   align-items: center;
   flex-direction: column;
 }
-
 .createPostPage .formContainer {
   display: flex;
   flex-direction: column;
@@ -217,20 +218,17 @@ body {
   border: 5px solid #fd2d01;
   border-radius: 5px;
 }
-
 .createPostPage .formContainer h1 {
-  background-color: #ffd7d7;
+  background-color: #fff;
   border-radius: 10px;
   padding: 5px;
   text-align: center;
 }
-
 .createPostPage .formContainer label {
   font-size: 25px;
   margin-bottom: 6px;
   color: black;
 }
-
 .createPostPage .formContainer .inputText {
   height: 40px;
   margin-top: 10px;
@@ -240,7 +238,6 @@ body {
   padding-left: 10px;
   font-size: 20px;
 }
-
 .createPostPage .formContainer .inputTextPost {
   height: 100px;
   margin-top: 10px;
@@ -260,11 +257,9 @@ span {
   display: flex;
   align-items: center;
 }
-
-.containerImageUpload input[type='file'] {
+.containerImageUpload input[type=file] {
   display: none;
 }
-
 .containerImageUpload span {
   color: grey;
   text-align: center;
@@ -285,8 +280,8 @@ span {
   text-align: center;
   width: 100%;
   height: 100%;
+  padding-top: 40px;
 }
-
 .posts .postsContainer {
   width: 100%;
   height: 100%;
@@ -321,7 +316,6 @@ span {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   position: relative;
 }
-
 .post .title {
   border-radius: 10px 10px 0px 0px;
   height: 50px;
@@ -332,7 +326,6 @@ span {
   color: white;
   font-size: 25px;
 }
-
 .post .body {
   display: flex;
   justify-content: center;
@@ -344,11 +337,9 @@ span {
   font-style: italic;
   text-align: center;
 }
-
 .post .body .postText {
   padding: 15px;
 }
-
 .post .body img {
   width: 80%;
   height: auto;
@@ -376,7 +367,6 @@ span {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-
 .footer .namePost {
   background: white;
   height: 40px;
@@ -393,64 +383,53 @@ span {
   padding: 3px;
   margin: 5px;
 }
-
 .footer p {
   font-size: 20px;
 }
-
 .footer .namePost:hover {
   color: white;
   background-color: #fd2d01;
   border: 2px solid white;
 }
-
 .footer .postBy {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .footer .likePost {
   font-size: 30px;
   margin: 10px;
   color: white;
   opacity: 20%;
 }
-
 .footer .comments {
   font-size: 30px;
   margin: 10px;
   color: white;
 }
-
 .footer .unlikePost {
   font-size: 30px;
   margin: 10px;
   color: white;
 }
-
 .footer .comments {
   font-size: 30px;
   margin: 10px;
   color: white;
 }
-
 .footer .unlikePost:hover,
 .footer .likePost:hover {
   font-size: 35px;
 }
-
 .footer label {
   font-size: 20px;
 }
-
 .footer .likes {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0px 20px 0px 20px;
 }
-
 .footer .params {
   color: white;
   font-size: 40px;
@@ -470,76 +449,326 @@ span {
     width: 80%;
   }
 }
-
 .loginContainer {
   display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 100vh;
-  padding-top: 100px;
+  /* RIGHT SIDE*/
 }
-
+.loginContainer .containerLeftSide {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fd2d01;
+  border-radius: 10px 0px 0px 10px;
+  height: 80%;
+  width: 30%;
+}
+.loginContainer .containerLeftSide span {
+  color: #fff;
+}
 .loginContainer h1 {
   font-size: 32px;
+  color: #fff;
 }
-
 .loginContainer label {
   font-size: 22px;
   color: black;
 }
-
 .loginContainer input {
-  width: 200px;
-  height: 50px;
-  border-radius: 8px;
+  width: 250px;
+  height: 55px;
+  border-radius: 0px 8px 8px 0px;
   border: none;
-  margin: 10px;
-  font-size: 20px;
-  border: 2px solid #fd2d01;
-  font-size: 20px;
+  margin: 15px 0px;
+  padding-left: 10px;
+  font-size: 23px;
+  font-family: "Bebas Neue", cursive;
 }
-
-.loginContainer input[type='text'] {
-  font-family: monospace;
+.loginContainer input[type=text] {
+  font-size: 23px;
+}
+.loginContainer .iconInput {
+  font-size: 41px;
+  color: #fff;
+  border: 1px solid black;
+  height: 55px;
+  padding: 0px 10px;
+  border: 1px solid #fff;
+  border-radius: 8px 0px 0px 8px;
+}
+.loginContainer .rememberCheckbox {
+  width: 20px;
+  height: 30px;
+  margin: 1px 10px 0px 0px;
+}
+.loginContainer .checkBoxAndLogin {
+  width: 320px;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.loginContainer .regisForgotPassContainer span:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.loginContainer .regisForgotPassContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 320px;
+}
+.loginContainer .divider {
+  display: flex;
+  width: 75%;
+  margin: 30px 0px;
+}
+.loginContainer hr.solid {
+  width: 40%;
+  border-top: 2px solid #bbb;
+  background-color: #bbb;
+}
+.loginContainer .containerLoginWith {
+  width: 70%;
+  height: 28%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.loginContainer .loginWith {
+  width: 100%;
+  height: 27%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: filter 0.4s ease;
+}
+.loginContainer .loginWith:hover {
+  cursor: pointer;
+  filter: brightness(1.2);
+}
+.loginContainer .containerLogo {
+  width: 18%;
+  height: 100%;
+  border-radius: 10px 0px 0px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loginContainer .iconSocialMedia {
+  font-size: 30px;
+  color: white;
+}
+.loginContainer .colorTwitter1 {
+  background-color: #0582d0;
+}
+.loginContainer .colorTwitter2 {
+  background-color: #1da1f2;
+}
+.loginContainer .colorFb1 {
+  background-color: #335599;
+}
+.loginContainer .colorFb2 {
+  background-color: #4267b2;
+}
+.loginContainer .colorGoogle1 {
+  background-color: #a93228;
+}
+.loginContainer .colorGoogle2 {
+  background-color: #db4437;
+}
+.loginContainer .containerText {
+  padding-right: 10%;
+  color: white;
+  height: 100%;
+  width: 82%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 20px;
+  border-radius: 0px 10px 10px 0px;
+}
+.loginContainer .containerRightSide {
+  width: 50%;
+  height: 80%;
+  background-color: #db4437;
+  background-image: url("/Users/kevin/Documents/Documents-Kevin/Développement_web/Projets OC/P7_ROUSSEAU_Kevin_22042022/Rousseau_Kevin_1_code_05062022/frontend/src/Images/city-g8c4d70f53_1920.jpeg");
+  background-size: cover;
+  background-position: center;
 }
 
 .registrationContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   width: 100%;
+  height: 95vh;
+  padding-top: 60px;
+  /* RIGHT SIDE*/
 }
-
 .registrationContainer .formCreateUserContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50%;
-  height: auto;
+  align-items: center;
+  height: 100%;
   padding: 20px;
-  border: 5px solid #fd2d01;
   border-radius: 5px;
 }
-
 .registrationContainer .formCreateUserContainer label {
   font-size: 22px;
-  color: black;
+  color: #fff;
 }
-
-.registrationContainer .formCreateUserContainer input {
-  height: 30px;
-  margin: 15px 0px 15px 0px;
-  height: 50px;
-  font-size: 20px;
+.registrationContainer .formCreateUserContainer input[type=text] {
+  font-size: 23px;
 }
-
+.registrationContainer .formCreateUserContainer .iconInput {
+  font-size: 41px;
+  color: #fff;
+  border: 1px solid black;
+  height: 55px;
+  padding: 0px 10px;
+  border: 1px solid #fff;
+  border-radius: 8px 0px 0px 8px;
+}
 .registrationContainer .formCreateUserContainer .errorMessage {
-  color: red;
+  color: white;
   font-size: 23px;
   text-decoration: underline;
+}
+.registrationContainer .containerLeftSide {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fd2d01;
+  border-radius: 10px 0px 0px 10px;
+  height: 80%;
+  width: 30%;
+}
+.registrationContainer .containerLeftSide h1 {
+  color: white;
+}
+.registrationContainer .containerLeftSide input {
+  width: 290px;
+  height: 55px;
+  border-radius: 0px 8px 8px 0px;
+  border: none;
+  margin: 15px 0px;
+  padding-left: 10px;
+  font-size: 23px;
+  font-family: "Bebas Neue", cursive;
+}
+.registrationContainer .containerLeftSide span {
+  color: #fff;
+}
+.registrationContainer .containerLeftSide .rememberCheckbox {
+  width: 20px;
+  height: 30px;
+  margin: 1px 10px 0px 0px;
+}
+.registrationContainer .containerLeftSide .checkBoxAndLogin {
+  width: 360px;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.registrationContainer .containerLeftSide .regisForgotPassContainer span:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.registrationContainer .containerLeftSide .regisForgotPassContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 360px;
+}
+.registrationContainer .containerLeftSide .divider {
+  display: flex;
+  width: 100%;
+  margin: 30px 0px;
+}
+.registrationContainer .containerLeftSide hr.solid {
+  width: 40%;
+  border-top: 2px solid #bbb;
+  background-color: #bbb;
+}
+.registrationContainer .containerLeftSide .containerLoginWith {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.registrationContainer .containerLeftSide .loginWith {
+  width: 100%;
+  height: 25%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: filter 0.4s ease;
+}
+.registrationContainer .containerLeftSide .loginWith:hover {
+  cursor: pointer;
+  filter: brightness(1.2);
+}
+.registrationContainer .containerLeftSide .containerLogo {
+  width: 18%;
+  height: 100%;
+  border-radius: 10px 0px 0px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.registrationContainer .containerLeftSide .iconSocialMedia {
+  font-size: 30px;
+  color: white;
+}
+.registrationContainer .containerLeftSide .colorTwitter1 {
+  background-color: #0582d0;
+}
+.registrationContainer .containerLeftSide .colorTwitter2 {
+  background-color: #1da1f2;
+}
+.registrationContainer .containerLeftSide .colorFb1 {
+  background-color: #335599;
+}
+.registrationContainer .containerLeftSide .colorFb2 {
+  background-color: #4267b2;
+}
+.registrationContainer .containerLeftSide .colorGoogle1 {
+  background-color: #a93228;
+}
+.registrationContainer .containerLeftSide .colorGoogle2 {
+  background-color: #db4437;
+}
+.registrationContainer .containerLeftSide .containerText {
+  padding-right: 10%;
+  color: white;
+  height: 100%;
+  width: 82%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  border-radius: 0px 10px 10px 0px;
+}
+.registrationContainer .containerRightSide {
+  width: 50%;
+  height: 80%;
+  background-color: #db4437;
+  background-image: url("/Users/kevin/Documents/Documents-Kevin/Développement_web/Projets OC/P7_ROUSSEAU_Kevin_22042022/Rousseau_Kevin_1_code_05062022/frontend/src/Images/city-g5eae019b9_1920.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+@media all and (max-width: 1100px) {
+  .registrationContainer .containerRightSide {
+    display: none;
+  }
+  .registrationContainer .containerLeftSide {
+    width: 80%;
+  }
 }
 
 .basicInfo {
@@ -558,11 +787,9 @@ span {
   width: 100%;
   height: auto;
 }
-
 .listOfPosts .post {
   width: 70%;
 }
-
 .listOfPosts .footer {
   height: 50px;
 }
@@ -579,11 +806,11 @@ h3 {
 }
 
 .headerParams {
+  padding-top: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .headerParams .gearIcon {
   font-size: 30px;
   margin: 10px;
@@ -606,7 +833,6 @@ h3 {
   border-radius: 15px;
   margin-bottom: 15px;
 }
-
 .deleteQuestion p {
   color: white;
   font-weight: bold;
@@ -617,13 +843,11 @@ h3 {
   display: flex;
   justify-content: space-between;
 }
-
 .YesOrNo .yes {
   font-weight: bold;
   width: 100px;
   height: 50px;
 }
-
 .YesOrNo .no {
   font-weight: bold;
   width: 100px;
@@ -653,6 +877,7 @@ h3 {
   flex-direction: row;
   width: 100%;
   max-height: 100000000px;
+  padding-top: 80px;
 }
 
 .leftSide {
@@ -672,7 +897,6 @@ h3 {
   display: flex;
   flex-direction: column;
 }
-
 .rightSide .addCommentContainer {
   max-height: 300px;
   width: 90%;
@@ -683,14 +907,12 @@ h3 {
   border-radius: 10px;
   background-color: #fd2d01;
 }
-
 .rightSide .addCommentContainer input {
   border: 2px solid #fd2d01;
   margin-bottom: 10px;
   width: 300px;
   font-size: 20px;
 }
-
 .rightSide .addCommentContainer h1 {
   color: white;
 }
@@ -704,7 +926,6 @@ h3 {
   align-items: center;
   margin-top: 20px;
 }
-
 .rightSide .listOfComments .comment {
   width: 70%;
   height: auto;
@@ -714,7 +935,6 @@ h3 {
   margin: 20px 0px 20px 0px;
   background-color: #4e5166;
 }
-
 .rightSide .listOfComments .comment .textComment {
   margin: 15px;
 }
@@ -724,32 +944,26 @@ h3 {
   max-height: 1000px;
   width: 90%;
 }
-
 #individual .title {
   height: 50px;
 }
-
 #individual .footer {
   display: flex;
   justify-content: space-between;
   font-size: 30px;
 }
-
 #individual .footer .likeAndDelete {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 #individual .bodyIndividual {
   font-size: 25px;
 }
-
 #individual .bodyIndividual .postText {
   padding: 15px;
   width: 100%;
 }
-
 #individual .bodyIndividual img {
   width: 80%;
   height: auto;
@@ -759,21 +973,18 @@ h3 {
   border: 1px solid grey;
   margin-bottom: 15px;
 }
-
 #individual .updatePost {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 #individual input {
   width: 40%;
   height: 40px;
   font-size: 20px;
   margin: 10px;
 }
-
 #individual .valid {
   font-size: 40px;
 }
@@ -809,7 +1020,6 @@ h3 {
   padding: 15px;
   overflow-wrap: break-word;
 }
-
 .textComment .inputUpdateComment {
   width: 50%;
   height: 40px;
@@ -821,7 +1031,6 @@ h3 {
   justify-content: center;
   align-items: center;
 }
-
 .comment .footerComment label {
   margin: 5px;
 }
@@ -847,7 +1056,6 @@ label {
     width: 100px;
   }
 }
-
 /* Button logout */
 button,
 a,
@@ -878,6 +1086,7 @@ button {
 
 .loginContainer .loginBtn {
   font-size: 20px;
+  width: 100px;
   background-color: #4e5166;
 }
 
@@ -933,6 +1142,29 @@ button {
   background-color: red;
 }
 
+/* LOGIN PAGE */
+.registrationBtn {
+  height: 50px;
+  width: 50%;
+  background-color: white;
+  color: rgba(204, 197, 197, 0.8666666667);
+  border: none;
+  border-radius: 10px;
+  font-size: 25px;
+  text-align: center;
+  padding: 0%;
+}
+
+.registrationBtn:hover {
+  cursor: pointer;
+  color: black;
+}
+
+.loginContainer button {
+  background-color: #fd2d01;
+  color: white;
+}
+
 /*UPDATE BUTTON*/
 .updateCommentBtn {
   height: 40px;
@@ -940,7 +1172,6 @@ button {
   margin: 15px;
   border: 1px solid white;
 }
-
 .updateCommentBtn span {
   color: white;
   font-size: 15px;
@@ -990,11 +1221,9 @@ button {
   align-items: center;
   margin: 0px;
 }
-
 .containerImageUpload #customButton p {
   margin-right: 5px;
 }
-
 .containerImageUpload #customButton span {
   color: white;
 }
@@ -1036,11 +1265,6 @@ button {
   color: black;
 }
 
-.loginContainer button {
-  background-color: #fd2d01;
-  color: white;
-}
-
 @media all and (max-width: 1100px) {
   .textComment .newCommentBtn {
     width: 80px;
@@ -1053,5 +1277,4 @@ button {
   .updatePost .updateButton {
     width: 20%;
   }
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
