--- a/src/Sass/Utils/_utilsGlobal.scss
+++ b/src/Sass/Utils/_utilsGlobal.scss
@@ -1,5 +1,5 @@
 $couleur_primaire: #fd2d01;
-$couleur_secondaire: #ffd7d7;
+$couleur_secondaire: #fff;
 $couleur_tertiaire: #4e5166;
 
 @mixin flex-centre {
