--- a/src/Sass/Layouts/_navbar.scss
+++ b/src/Sass/Layouts/_navbar.scss
@@ -8,9 +8,9 @@
 	justify-content: space-between;
 	align-items: center;
 	font-family: Arial, Helvetica, sans-serif;
-
-	// position: fixed;
-	// z-index: 1000;
+	position: fixed;
+	z-index: 2;
+	margin-bottom: 20px;
 }
 
 .navbar a {
