--- a/src/Sass/Pages/_createPost.scss
+++ b/src/Sass/Pages/_createPost.scss
@@ -1,6 +1,7 @@
 /***** CREATE POST PAGE CSS ******/
 
 .createPostPage {
+	padding-top: 40px;
 	font-family: Arial, Helvetica, sans-serif;
 	width: 100%;
 	height: 70vh;
