--- a/src/Sass/Pages/_login.scss
+++ b/src/Sass/Pages/_login.scss
@@ -1,13 +1,27 @@
 .loginContainer {
 	display: flex;
 	align-items: center;
-	flex-direction: column;
+	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	padding-top: 100px;
+
+	.containerLeftSide {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		background-color: $couleur_primaire;
+		border-radius: 10px 0px 0px 10px;
+		height: 80%;
+		width: 30%;
+
+		span {
+			color: $couleur_secondaire;
+		}
+	}
 
 	h1 {
 		font-size: 32px;
+		color: $couleur_secondaire;
 	}
 
 	label {
@@ -16,18 +30,142 @@
 	}
 
 	input {
-		width: 200px;
-		height: 50px;
-		border-radius: 8px;
+		width: 250px;
+		height: 55px;
+		border-radius: 0px 8px 8px 0px;
 		border: none;
-		margin: 10px;
-		font-size: 20px;
-		border: 2px solid $couleur_primaire;
-		font-size: 20px;
+		margin: 15px 0px;
+		padding-left: 10px;
+		font-size: 23px;
+		font-family: 'Bebas Neue', cursive;
 	}
 
 	input[type='text'] {
-		font-family: monospace;
+		font-size: 23px;
+	}
+
+	.iconInput {
+		font-size: 41px;
+		color: $couleur_secondaire;
+		border: 1px solid black;
+		height: 55px;
+		padding: 0px 10px;
+		border: 1px solid $couleur_secondaire;
+		border-radius: 8px 0px 0px 8px;
+	}
+
+	.rememberCheckbox {
+		width: 20px;
+		height: 30px;
+		margin: 1px 10px 0px 0px;
+	}
+
+	.checkBoxAndLogin {
+		width: 320px;
+		height: 75px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.regisForgotPassContainer span:hover {
+		cursor: pointer;
+		text-decoration: underline;
+	}
+
+	.regisForgotPassContainer {
+		display: flex;
+		justify-content: space-between;
+		width: 320px;
+	}
+
+	.divider {
+		display: flex;
+		width: 75%;
+		margin: 30px 0px;
+	}
+
+	hr.solid {
+		width: 40%;
+		border-top: 2px solid #bbb;
+		background-color: #bbb;
+	}
+
+	.containerLoginWith {
+		width: 70%;
+		height: 28%;
+		display: flex;
+		justify-content: space-between;
+		flex-direction: column;
+	}
+
+	.loginWith {
+		width: 100%;
+		height: 27%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		transition: filter 0.4s ease;
+	}
+
+	.loginWith:hover {
+		cursor: pointer;
+		filter: brightness(1.2);
+	}
+
+	.containerLogo {
+		width: 18%;
+		height: 100%;
+		border-radius: 10px 0px 0px 10px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.iconSocialMedia {
+		font-size: 30px;
+		color: white;
+	}
+
+	.colorTwitter1 {
+		background-color: #0582d0;
+	}
+	.colorTwitter2 {
+		background-color: #1da1f2;
+	}
+	.colorFb1 {
+		background-color: #335599;
+	}
+	.colorFb2 {
+		background-color: #4267b2;
+	}
+	.colorGoogle1 {
+		background-color: #a93228;
+	}
+	.colorGoogle2 {
+		background-color: #db4437;
+	}
+
+	.containerText {
+		padding-right: 10%;
+		color: white;
+		height: 100%;
+		width: 82%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		font-size: 20px;
+		border-radius: 0px 10px 10px 0px;
+	}
+
+	/* RIGHT SIDE*/
+
+	.containerRightSide {
+		width: 50%;
+		height: 80%;
+		background-color: #db4437;
+		background-image: url('/Users/kevin/Documents/Documents-Kevin/Développement_web/Projets OC/P7_ROUSSEAU_Kevin_22042022/Rousseau_Kevin_1_code_05062022/frontend/src/Images/city-g8c4d70f53_1920.jpeg');
+		background-size: cover;
+		background-position: center;
 	}
 }
