--- a/src/Sass/Pages/_login.scss
+++ b/src/Sass/Pages/_login.scss
@@ -164,8 +164,8 @@
 		width: 50%;
 		height: 80%;
 		background-color: #db4437;
-		background-image: url('/Users/kevin/Documents/Documents-Kevin/Développement_web/Projets OC/P7_ROUSSEAU_Kevin_22042022/Rousseau_Kevin_1_code_05062022/frontend/src/Images/city-g8c4d70f53_1920.jpeg');
-		background-size: cover;
-		background-position: center;
+		// background-image: url('/Users/kevin/Documents/Documents-Kevin/Développement_web/Projets OC/P7_ROUSSEAU_Kevin_22042022/Rousseau_Kevin_1_code_05062022/frontend/src/Images/city-g8c4d70f53_1920.jpeg');
+		// background-size: cover;
+		// background-position: center;
 	}
 }
