--- a/src/Sass/Pages/_registration.scss
+++ b/src/Sass/Pages/_registration.scss
@@ -181,9 +181,9 @@
 		width: 50%;
 		height: 80%;
 		background-color: #db4437;
-		// background-image: url('/Users/kevin/Documents/Documents-Kevin/Développement_web/Projets OC/P7_ROUSSEAU_Kevin_22042022/Rousseau_Kevin_1_code_05062022/frontend/src/Images/city-g5eae019b9_1920.jpeg');
-		// background-size: cover;
-		// background-position: center;
+		background-image: url('./city-g5eae019b9_1920.jpeg');
+		background-size: cover;
+		background-position: center;
 	}
 
 	@media all and (max-width: 1100px) {
