--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -593,7 +593,7 @@ span {
   width: 50%;
   height: 80%;
   background-color: #db4437;
-  background-image: url("./city-g8c4d70f53_1920.jpeg");
+  background-image: url("https://pixabay.com/get/gb24a69289302eae244b631f39c885a6e82780b74538e8f393e144799ee63f4e63d039f4676e05897ec8b2fd079cde1218150d782e2cd6d772bfaa5c2dd1221b16a79d657b331168d4427584e08233573_1920.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -757,7 +757,7 @@ span {
   width: 50%;
   height: 80%;
   background-color: #db4437;
-  background-image: url("./city-g5eae019b9_1920.jpeg");
+  background-image: url("https://pixabay.com/get/ga4675fb5d117187b06d40c6c4cdd2f2cfbb42009d2c2394552a1d60141ebe4919e664eabfcf694e429c99dee31f997e65ef4619bb6b9d20c77bc5a94ed330b9ebb90252c2fb0db1d5ae7565c26efa4e3_1920.jpg");
   background-size: cover;
   background-position: center;
 }
