--- a/src/Sass/Pages/_registration.scss
+++ b/src/Sass/Pages/_registration.scss
@@ -181,7 +181,7 @@
 		width: 50%;
 		height: 80%;
 		background-color: #db4437;
-		background-image: url('./city-g5eae019b9_1920.jpeg');
+		background-image: url('https://pixabay.com/get/ga4675fb5d117187b06d40c6c4cdd2f2cfbb42009d2c2394552a1d60141ebe4919e664eabfcf694e429c99dee31f997e65ef4619bb6b9d20c77bc5a94ed330b9ebb90252c2fb0db1d5ae7565c26efa4e3_1920.jpg');
 		background-size: cover;
 		background-position: center;
 	}
