--- a/src/Sass/Pages/_login.scss
+++ b/src/Sass/Pages/_login.scss
@@ -164,7 +164,7 @@
 		width: 50%;
 		height: 80%;
 		background-color: #db4437;
-		background-image: url('./city-g8c4d70f53_1920.jpeg');
+		background-image: url('https://pixabay.com/get/gb24a69289302eae244b631f39c885a6e82780b74538e8f393e144799ee63f4e63d039f4676e05897ec8b2fd079cde1218150d782e2cd6d772bfaa5c2dd1221b16a79d657b331168d4427584e08233573_1920.jpg');
 		background-size: cover;
 		background-position: center;
 	}
